--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 header {
     background-image: linear-gradient(rgba(121, 162, 243, 0.704), rgba(3, 23, 81, 0.866)), url("assets/_.jpeg");
     background-position: center;
+    min-height: 100vh;
 }
 
 .letra-color {
@@ -26,5 +27,5 @@ header {
 }
 
 #contacto{
-    height: 80vh;
+    min-height: 80vh;
 }
